docs/sf-export/sfdx-raw/objects/Financial_Summary__c/Financial_Summary__c.object-meta.xml
<CustomObject>
    <description>This object stores the source of income, source of expenditures and calculate the amount client can afford each month</description>
    <label>Financial Summary</label>
    <nameField>
        <displayFormat>FS-{0000}</displayFormat>
        <label>Financial Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>