docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Summaries</relationshipLabel>
    <relationshipName>Financial_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>