docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Actual_Program_Term__c.field-meta.xml
<CustomField>
    <fullName>Actual_Program_Term__c</fullName>
    <label>Actual Program Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>