docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Actual_Weekly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Actual_Weekly_Payment__c</fullName>
    <label>Actual Weekly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>