docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Affordable_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Affordable_Payment_Amount__c</fullName>
    <formula>Monthly_Income__c - Monthly_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affordable Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>