docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Bank_Loan_Payments__c.field-meta.xml
<CustomField>
    <fullName>Bank_Loan_Payments__c</fullName>
    <inlineHelpText>Bank Loan Payments</inlineHelpText>
    <label>Bank Loan Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>