docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Buyout_Program_Weekly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Program_Weekly_Payment__c</fullName>
    <formula>IF((!ISNULL(Net_Profit__c) &amp;&amp; Net_Profit__c &gt; 0), 
IF(Buyout_Program_Weeks__c &gt; 104, 104, ROUND(Opportunity__r.Total_Debt__c * 0.92 / Buyout_Program_Weeks__c,0))
, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Weekly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>