docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Buyout_Program_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Program_Weeks__c</fullName>
    <formula>IF((!ISNULL(Net_Profit__c) &amp;&amp; Net_Profit__c &gt; 0),
	IF(ROUND(Opportunity__r.Total_Debt__c / (Net_Profit__c/4.2), 0) &gt; 104, 
		104, 
		ROUND(Opportunity__r.Total_Debt__c / (Net_Profit__c/4.2), 0)
	),
 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Program Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>