docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Car_Payment__c.field-meta.xml
<CustomField>
    <fullName>Car_Payment__c</fullName>
    <label>Car Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>