docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/CC_LOC_Payments__c.field-meta.xml
<CustomField>
    <fullName>CC_LOC_Payments__c</fullName>
    <label>CC/LOC Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>