docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Child_support__c.field-meta.xml
<CustomField>
    <fullName>Child_support__c</fullName>
    <label>Child support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>