docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Debt_Payments__c.field-meta.xml
<CustomField>
    <fullName>Debt_Payments__c</fullName>
    <formula>Bank_Loan_Payments__c +  CC_LOC_Payments__c +  Lease_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debt Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>