docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Direct_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Direct_Expenses__c</fullName>
    <formula>Material_Cost__c +  Sub_contractor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>