docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EBITDA__c</fullName>
    <formula>Gross_Profit__c - Operating_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBITDA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>