docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Equipment_Payments__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Payments__c</fullName>
    <label>Equipment Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>