docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Internet__c.field-meta.xml
<CustomField>
    <fullName>Internet__c</fullName>
    <label>Internet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>