docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Lease_Payments__c.field-meta.xml
<CustomField>
    <fullName>Lease_Payments__c</fullName>
    <inlineHelpText>Lease Payment Amount</inlineHelpText>
    <label>Lease Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>