docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Monthly_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expenses__c</fullName>
    <description>Sum of all expenses</description>
    <formula>Car_Payment__c + Child_support__c + Internet__c + Phone__c + Rent_Mortgage__c + Restaurant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>