docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Operating_Expense__c.field-meta.xml
<CustomField>
    <fullName>Operating_Expense__c</fullName>
    <formula>(Equipment_Payments__c + Insurance__c + Payroll__c +  Rent__c +  Utilities__c + Other_Expenses__c)*   1.15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operating Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>