docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Financial Summaries</relationshipLabel>
    <relationshipName>Financial_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>