docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Payroll__c.field-meta.xml
<CustomField>
    <fullName>Payroll__c</fullName>
    <label>Payroll</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>