docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>