docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Rent__c.field-meta.xml
<CustomField>
    <fullName>Rent__c</fullName>
    <inlineHelpText>Rent Amount</inlineHelpText>
    <label>Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>