docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Rent_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Rent_Mortgage__c</fullName>
    <label>Rent/Mortgage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>