docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <label>Restaurant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>