docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Sales__c.field-meta.xml
<CustomField>
    <fullName>Sales__c</fullName>
    <description>Average Monthly Sales of the Business</description>
    <inlineHelpText>Average Monthly Sales of the Business</inlineHelpText>
    <label>Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>