docs/sf-export/sfdx-raw/objects/Financial_Summary__c/fields/Sub_contractor__c.field-meta.xml
<CustomField>
    <fullName>Sub_contractor__c</fullName>
    <label>Sub contractor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>